--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "exact-math": "^2.2.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
